# code-rescue-tool

./: .gitignore  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  setup.py
ci/: check_upstream_contracts.py
code_rescue/: __init__.py  cli.py  complexity.py  dependencies.py  smells.py
contracts/: rule_registry.json  run_result.schema.json  signals_latest.schema.json
docs/: skylos-design-review.md
examples/: spaghetti_code.py
schemas/: finding.schema.json  release_bom.schema.json  rule_pack.schema.json  rule_versions.schema.json  rules_registry.schema.json  trusted_signing_keys.schema.json
scripts/: check_release_bom_consistency.py  check_release_bom_generator_gate.py  generate_release_bom.py  generate_rule_pack.py  refresh_rule_versions.py  refresh_rules_registry.py  refresh_treesitter_manifest.py  sign_dist_artifacts.py  sync_contracts.sh  verify_dist_signatures.py
tests/: __init__.py  test_cli_api_parity.py  test_cli_api_parity_js_ts_flagged.py  test_cli_fix_integration.py  test_code_rescue.py  test_dead_code_fixer.py  test_exit_code_contract.py  test_fixer_registry_contract.py  test_golden_rescue_plan.py  test_ingest_run_result.py  test_js_ts_analyzer_scaffold_no_output_change.py  test_js_ts_eval_rule_flagged.py  test_language_discovery_js_ts_flag.py  test_mutable_default_fixer.py  test_rescue_planner.py  test_rule_implementation_coverage.py  test_rule_registry_contract.py  test_rule_versions_gate.py  test_rules_registry_gate.py  test_schema_validation.py  test_semantic_surface_requires_signal_logic_bump.py  test_skylos_loader.py  (+6 more)
(+61 files in other folders)
