[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-rescue-tool"
version = "0.1.0"
description = "Spaghetti Code Rescue Tools - automated fixes for code-analysis-tool findings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "HanzoRazer" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
analysis = [
    "code-analysis-tool @ git+https://github.com/HanzoRazer/code-analysis-tool"
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
code-rescue = "code_rescue.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_rescue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
